[package]
name = "lange"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.9.0"
structopt = "0.3.14"
tempfile = "3.1.0"
derive_builder = "0.9.0"
