[package]
name = "lange"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

categories = ["command-line-utilities", "development-tools"]
description = "Quickly enter a dev environment with nix-shell"
# documentation = "FIXME"
homepage = "https://github.com/lovesegfault/lange"
keywords = ["nixos", "nix", "nix-shell", "dev", "environment"]
license = "BSD-3-Clause"
readme = "./README.md"
repository = "https://github.com/lovesegfault/lange"

[dependencies]
askama = "0.9.0"
structopt = "0.3.14"
tempfile = "3.1.0"
derive_builder = "0.9.0"
